# turboquant-pytorch

./: .gitignore  README.md  generation_test.py  pyproject.toml  setup.py  test_packed.py  test_turboquant.py  validate.py
.github/workflows/: ci.yml
turboquant/: __init__.py  benchmark_cuda.py  benchmark_rotorquant.py  compressors.py  cuda_backend.py  hadamard.py  rotorquant.py  validate_rotorquant.py
turboquant/csrc/: qjl_quant_values_kernel.cu  rotor_fused_kernel.cu
